--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 
 /* Header Styles */
 header {
-    background-color: #4CAF50;
+    background-color: #0509f5;
     color: white;
     text-align: center;
     padding: 50px 20px;
