--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,13 @@ header {
 
 header h1 {
     font-size: 2.5em;
+    font-family: 'Playfair Display'; 
     margin-bottom: 10px;
 }
 
 header p {
     font-size: 1.2em;
+    font-family: 'Playfair Display';
 }
 
 /* Main Section Styles */
