--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ header {
     text-align: center;
     padding: 50px 20px;
     border-radius: 8px;
+    margin-top: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
