--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,8 @@ header {
 
 header h1 {
     font-size: 2.5em;
-    font-family: 'Playfair Display'; 
+    font-family: 'Playfair Display';
+    text-align: center;
     margin-bottom: 10px;
 }
 
@@ -51,6 +52,7 @@ main {
 .content h2 {
     font-size: 1.8em;
     font-family: 'Playfair Display';
+    text-align: center;
     margin-bottom: 10px;
 }
 
