--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,11 @@ main {
     margin-bottom: 20px;
 }
 
+.content img {
+    width: 100%;
+    height: auto;
+}
+
 .content ul {
     list-style-type: none;
 }
