--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ main {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;*/
-    justify-content: center;
+    /*justify-content: center;*/
     height: 100vh;
 }
 
