--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ main {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;*/
     /*justify-content: center;*/
-    height: 100vh;
+    /*height: 100vh;*/
 }
 
 .content h2 {
