--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ main {
 }
 
 .content {
-    display: flex;
+    /*display: flex;*/
     background-color: white;
     padding: 20px;
     margin-bottom: 30px;
