--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ main {
     margin-bottom: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /*align-items: center;*/
+    align-items: center;
     /*justify-content: center;*/
     /*height: 100vh;*/
 }
