--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ header {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-header img.profile_pic {
+header img {
     width: 80px;
     height: 80px;
     border-radius: 50%;
