--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 header {
     background-color: blue;
     color: white;
-    text-align: center;
+    text-align: left;
     padding: 50px 20px;
     border-radius: 8px;
     margin-top: 10px;
@@ -25,8 +25,8 @@ header {
 }
 
 header img {
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     margin-right: 15px;
 }
