--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ header {
     justify-content: space-between;
     background-color: blue;
     color: white;
-    align-items: center;
+    /*align-items: center;*/
     padding: 50px 20px;
     border-radius: 8px;
     margin-top: 10px;
