--- a/styles.css
+++ b/styles.css
@@ -33,14 +33,14 @@ header img {
     margin-right: 15px;
 }
 
-header h1 {
+.header_text h1 {
     text-align: center;
     font-size: 2.5em;
     font-family: 'Playfair Display';
     margin-bottom: 10px;
 }
 
-header p {
+.header_text p {
     text-align: center;
     font-size: 1.2em;
 }
