--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,9 @@ header img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin-right: 15px;
+    /*margin-right: 15px;*/
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .header_text h1 {
