--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ header img {
     /*margin-right: 15px;*/
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left: 10px;
 }
 
 .header_text h1 {
