--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,7 @@ header img {
     height: 50px;
     border-radius: 50%;
     /*margin-right: 15px;*/
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+    padding: 50px;
 }
 
 .header_text h1 {
