--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ header img {
 .header_text p {
     text-align: center;
     font-size: 1.2em;
-    padding: 20px;
+    /*padding: 20px;*/
 }
 
 /* Main Section Styles */
