--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,10 @@ header img {
     padding: 20px;
 }
 
+.header_text {
+    align-items: center;
+}
+
 .header_text h1 {
     text-align: center;
     font-size: 2.5em;
