--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,11 @@ body {
 /* Header Styles */
 header {
     display: flex;
-    gap: 50px;
+    /*gap: 50px;*/
     /*justify-content: space-between;*/
     background-color: blue;
     color: white;
-    /*align-items: center;*/
+    align-items: center;
     /*padding: 50px 20px;*/
     border-radius: 8px;
     margin-top: 10px;
