--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 header {
     display: flex;
     /*gap: 50px;*/
-    justify-content: space-between;
+    justify-content: center;
     background-color: blue;
     color: white;
     align-items: center;
