--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,11 @@ header {
 }*/
 
 header img {
-    width: 200px;
-    height: 200px;
+    width: 20%;
+    height: auto;
     border-radius: 50%;
     /*margin-left: 300px;*/
-    padding: 20px;
+    /*padding: 20px;*/
 }
 
 /*.header_items .header_text {
