--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ header {
 }*/
 
 header img {
-    width: 20%;
-    height: auto;
+    width: auto;
+    height: 20%;
     border-radius: 50%;
     /*margin-left: 300px;*/
     /*padding: 20px;*/
