--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ header img {
     width: auto;
     border-radius: 50%;
     /*margin-left: 300px;*/
-    /*padding: 20px;*/
+    padding: 20px;
 }
 
 /*.header_items .header_text {
