--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ header {
     display: flex;
     /*gap: 50px;*/
     justify-content: center;
-    background-color: blue;
+    /*background-color: blue;*/
+    background-image: url('images/header_image.jpg');
     color: white;
     align-items: center;
     /*padding: 50px 20px;*/
