--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ header {
     justify-content: center;
     /*background-color: blue;*/
     background-image: url('images/header_image.jpg');
+    background-size: cover;
     color: white;
     align-items: center;
     /*padding: 50px 20px;*/
