--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ header {
     /*background-color: blue;*/
     background-image: url('images/header_image.jpg');
     background-size: cover;
+    background-position: center;
     color: white;
     align-items: center;
     /*padding: 50px 20px;*/
