--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,8 @@ header {
     /*gap: 50px;*/
     justify-content: center;
     /*background-color: blue;*/
-    background-image: url('images/header_image.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/header_image.jpg');
+    /*background-image: url('images/header_image.jpg');*/
     background-size: cover;
     background-position: center;
     color: white;
