--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,12 @@
 }
 
 @font-face {
-    font-family: 'Audrey';
+    font-family: 'Audrey-Medium';
     src: url('fonts/Audrey 1.0/Audrey 1.0/Audrey-Medium.otf') format('opentype');
+}
+@font-face {
+    font-family: 'Audrey-NormalOblique';
+    src: url('fonts/Audrey 1.0/Audrey 1.0/Audrey-NormalOblique.otf') format('opentype');
 }
 
 body {
@@ -63,6 +67,7 @@ header img {
 
 .header_text p {
     text-align: center;
+    font-family: 'Audrey-NormalOblique';
     font-size: 1.2em;
     /*padding: 20px;*/
 }
