--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ header img {
 .header_text h1 {
     text-align: center;
     font-size: 2.5em;
-    font-family: 'Audrey';
+    font-family: 'Audrey-Medium';
     margin-bottom: 10px;
 }
 
