--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,14 @@
     font-family: 'Audrey-NormalOblique';
     src: url('fonts/Audrey 1.0/Audrey 1.0/Audrey-NormalOblique.otf') format('opentype');
 }
+@font-face {
+    font-family: 'Roboto-Medium';
+    src: url('fonts/Roboto/Roboto-Medium.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Roboto-LightItalic';
+    src: url('fonts/Roboto/Roboto-LightItalic.ttf') format('truetype');
+}
 
 body {
     font-family: 'Arial', sans-serif;
