--- a/styles.css
+++ b/styles.css
@@ -69,16 +69,16 @@ header img {
 .header_text h1 {
     text-align: center;
     font-size: 2.5em;
-    font-family: "Roboto";
-    font-weight: 500; 
+    font-family: 'Roboto-Medium';
+    /*font-weight: 500;*/
     margin-bottom: 10px;
 }
 
 .header_text p {
     text-align: center;
-    font-family: "Roboto";
-    font-weight: 400;
-    font-style: italic;
+    font-family: 'Roboto-LightItalic';
+    /*font-weight: 400;*/
+    /*font-style: italic;*/
     font-size: 1.2em;
     /*padding: 20px;*/
 }
