--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,14 @@
     font-family: 'Roboto-LightItalic';
     src: url('fonts/Roboto/Roboto-LightItalic.ttf') format('truetype');
 }
+@font-face {
+    font-family: 'Lato-Regular';
+    src: url('fonts/Lato/Lato-Regular.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Lato-LightItalic';
+    src: url('fonts/Lato/Lato-LightItalic.ttf') format('truetype');
+}
 
 body {
     font-family: 'Arial', sans-serif;
@@ -69,14 +77,14 @@ header img {
 .header_text h1 {
     text-align: center;
     font-size: 2.5em;
-    font-family: 'Roboto-Medium';
+    font-family: 'Lato-Regular';
     /*font-weight: 500;*/
     margin-bottom: 10px;
 }
 
 .header_text p {
     text-align: center;
-    font-family: 'Roboto-LightItalic';
+    font-family: 'Lato-LightItalic';
     /*font-weight: 400;*/
     /*font-style: italic;*/
     font-size: 1.2em;
