--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ main {
 .content {
     /*display: flex;*/
     /*background-color: white;*/
-    background: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 255, 0.5));
+    background: linear-gradient(rgba(0, 0, 255, 0.2), rgba(255, 255, 255, 0.2));
     padding: 20px;
     margin-bottom: 30px;
     border-radius: 8px;
@@ -136,6 +136,7 @@ main {
 
 .content ul li {
     margin: 10px 0;
+    font-family: 'Helvetica';
     text-align: center;
 }
 
