--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ main {
 .content {
     /*display: flex;*/
     /*background-color: white;*/
-    background: linear-gradient(rgba(0, 0, 255, 0.2), rgba(255, 255, 255, 0.2));
+    background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));
     padding: 20px;
     margin-bottom: 30px;
     border-radius: 8px;
@@ -120,6 +120,7 @@ main {
 .content p {
     font-size: 1em;
     font-family: 'Helvetica';
+    font-style: bold;
     margin-bottom: 20px;
 }
 
@@ -137,6 +138,7 @@ main {
 .content ul li {
     margin: 10px 0;
     font-family: 'Helvetica';
+    font-style: bold;
     text-align: center;
 }
 
@@ -163,4 +165,6 @@ footer {
 
 footer p {
     font-size: 0.8em;
+    font-family: 'Helvetica';
+    font-style: bold;
 }
