--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,9 @@ header {
     color: white;
     align-items: center;
     /*padding: 50px 20px;*/
-    border-radius: 8px;
+    /*border-radius: 8px;
     margin-top: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
 }
 
 /*.header_items {
@@ -102,7 +102,7 @@ main {
     /*background-color: white;*/
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);
-    padding: 20px;
+    /*padding: 20px;*/
     margin-bottom: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
