--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    width: 100%;
 }
 
 @font-face {
@@ -102,7 +103,7 @@ main {
     /*background-color: white;*/
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);
-    /*padding: 20px;*/
+    padding: 20px;
     margin-bottom: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
