--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ header img {
 
 .header_text h1 {
     text-align: center;
-    font-size: 2.5em;
+    font-size: 4em;
     font-family: 'Lato-Regular';
     /*font-weight: 500;*/
     margin-bottom: 10px;
@@ -88,7 +88,7 @@ header img {
     font-family: 'Lato-LightItalic';
     /*font-weight: 400;*/
     /*font-style: italic;*/
-    font-size: 1.2em;
+    font-size: 1.5em;
     /*padding: 20px;*/
 }
 
@@ -114,11 +114,19 @@ main {
     /*height: 100vh;*/
 }
 
-.content h2 {
-    font-size: 2em;
+.content h1 {
+    font-size: 4em;
     text-align: center;
     font-family: 'Lato-Regular';
     color: white;
+    margin-bottom: 5px;
+}
+
+.content h2 {
+    font-size: 3.5em;
+    text-align: center;
+    font-family: 'Lato-Regular';
+    color: lightgrey;
     margin-bottom: 10px;
 }
 
@@ -126,7 +134,7 @@ main {
     font-size: 1.2em;
     font-family: 'Helvetica';
     color: white;
-    line-height: 1;
+    line-height: 1.2;
     font-style: bold;
     margin-bottom: 20px;
 }
@@ -140,6 +148,7 @@ main {
 
 .content ul {
     list-style-type: none;
+    line-height: 1.2;
 }
 
 .content ul li {
@@ -147,12 +156,14 @@ main {
     font-size: 1.2em;
     font-family: 'Helvetica';
     color: white;
-    line-height: 1;
+    line-height: 1.2;
     font-style: bold;
     text-align: center;
 }
 
 .content a {
+    font-size: 1.2em;
+    font-family: 'Helvetica';
     color: blue;
     text-decoration: none;
     /*text-align: center;*/
