--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ main {
     text-align: center;
     font-family: 'Lato-Regular';
     color: white;
-    margin-bottom: 5px;
+    /*margin-bottom: 5px;*/
 }
 
 .content h2 {
