--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,7 @@ main {
     text-align: center;
     font-family: 'Lato-Regular';
     color: lightgrey;
+    margin-top: 5px;
     margin-bottom: 10px;
 }
 
