--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,8 @@ main {
     text-align: center;
     font-family: 'Lato-Regular';
     color: white;
-    /*margin-bottom: 5px;*/
+    padding: 0px;
+    margin-bottom: 5px;
 }
 
 .content h2 {
@@ -127,7 +128,7 @@ main {
     text-align: center;
     font-family: 'Lato-Regular';
     color: lightgrey;
-    margin-top: 5px;
+    /*margin-top: 5px;*/
     margin-bottom: 10px;
 }
 
