--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ main {
     text-align: center;
     font-family: 'Lato-Regular';
     color: lightgrey;
+    padding: 0px;
     /*margin-top: 5px;*/
     margin-bottom: 10px;
 }
