--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ main {
     /*background-color: white;*/
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);
-    padding: 20px;
+    /*padding: 20px;*/
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 12px;
@@ -119,7 +119,7 @@ main {
     text-align: center;
     font-family: 'Lato-Regular';
     color: white;
-    padding: 0px;
+    /*padding: 0px;*/
     margin-bottom: 5px;
 }
 
@@ -128,7 +128,7 @@ main {
     text-align: center;
     font-family: 'Lato-Regular';
     color: lightgrey;
-    padding: 0px;
+    /*padding: 0px;*/
     /*margin-top: 5px;*/
     margin-bottom: 10px;
 }
@@ -139,6 +139,7 @@ main {
     color: white;
     line-height: 1.2;
     font-style: bold;
+    padding: 20px;
     margin-bottom: 20px;
 }
 
