--- a/styles.css
+++ b/styles.css
@@ -105,8 +105,8 @@ main {
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);
     /*padding: 20px;*/
-    /*margin-top: 20px;
-    margin-bottom: 20px;*/
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;*/
@@ -129,7 +129,7 @@ main {
     font-family: 'Lato-Regular';
     color: lightgrey;
     /*padding: 0px;*/
-    /*margin-top: 5px;*/
+    margin-top: 5px;
     margin-bottom: 10px;
 }
 
