--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
     background-color: #f7f7f7;
     color: #333;
     line-height: 1.6;
-    padding: 0 20px;
+    /*padding: 0 20px;*/
 }
 
 /* Header Styles */
