--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
     background-color: #f7f7f7;
     color: #333;
     line-height: 1.6;
-    /*padding: 0 20px;*/
+    padding: 0 20px; /*comment this to remove white side box borders*/
 }
 
 /* Header Styles */
@@ -119,7 +119,7 @@ main {
     text-align: center;
     font-family: 'Lato-Regular';
     color: white;
-    /*padding: 0px;*/
+    padding: 0;
     margin-bottom: 5px;
 }
 
@@ -128,7 +128,7 @@ main {
     text-align: center;
     font-family: 'Lato-Regular';
     color: lightgrey;
-    /*padding: 0px;*/
+    padding: 0;
     margin-top: 5px;
     margin-bottom: 10px;
 }
