--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
     /*font-family: 'Helvetica';*/
     background-color: #f7f7f7;
     color: #333;
-    line-height: 1.6;
+    /*line-height: 1.6;*/
     padding: 0 20px; /*comment this to remove white side box borders*/
 }
 
