--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ header img {
 main {
     /*max-width: 900px;*/
     width: 100%;
-    margin: 40px auto;
+    /*margin: 40px auto;*/
 }
 
 .content {
