--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ main {
     color: white;
     padding: 0;
     margin-top: 10px;
-    margin-bottom: 5px;
+    margin-bottom: 0;
 }
 
 .content h2 {
