--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,7 @@ main {
     padding: 0;
     margin-top: 10px;
     margin-bottom: 0;
+    line-height: 1;
 }
 
 .content h2 {
@@ -131,7 +132,7 @@ main {
     color: lightgrey;
     padding: 0;
     /*margin-top: 5px;*/
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
 }
 
 .content p {
