--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ main {
     padding: 0;
     margin-top: 10px;
     margin-bottom: 0;
-    line-height: 1;
+    /*line-height: 1;*/
 }
 
 .content h2 {
@@ -133,6 +133,7 @@ main {
     padding: 0;
     /*margin-top: 5px;*/
     /*margin-bottom: 10px;*/
+    line-height: 1;
 }
 
 .content p {
