--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ main {
     /*margin-top: 20px;
     margin-bottom: 20px;*/
     border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
     /*align-items: center;*/
     /*justify-content: center;*/
     /*height: 100vh;*/
@@ -116,7 +116,7 @@ main {
 
 .content h1 {
     font-size: 4em;
-    text-align: justify;
+    text-align: center;
     font-family: 'Lato-Regular';
     color: white;
     /*padding: 0;*/
@@ -125,8 +125,8 @@ main {
 }
 
 .content h2 {
-    font-size: 3.33em;
-    text-align: justify;
+    font-size: 3.32em;
+    text-align: center;
     font-family: 'Lato-Regular';
     color: rgb(211, 211, 270);
     /*padding: 0;*/
@@ -188,7 +188,7 @@ footer {
     line-height: 1;
     border-radius: 12px;
     margin-bottom: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
 }
 
 footer p {
