--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ main {
     /*margin-top: 20px;
     margin-bottom: 20px;*/
     border-radius: 12px;
-    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /*align-items: center;*/
     /*justify-content: center;*/
     /*height: 100vh;*/
@@ -125,10 +125,10 @@ main {
 }
 
 .content h2 {
-    font-size: 3.32em;
+    font-size: 3.3em;
     text-align: center;
     font-family: 'Lato-Regular';
-    color: rgb(211, 211, 270);
+    color: rgb(211, 211, 275);
     /*padding: 0;*/
     /*margin-top: 5px;*/
     /*margin-bottom: 10px;*/
