--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ main {
     /*padding: 0;*/
     /*margin-top: 5px;*/
     /*margin-bottom: 10px;*/
-    line-height: 0.5;
+    line-height: 0.3;
 }
 
 .content p {
@@ -145,12 +145,12 @@ main {
     margin-bottom: 20px;
 }
 
-.content img {
+/*.content img {
     display: block;
     margin: auto;
     width: 50%;
     height: auto;
-}
+}*/
 
 .content ul {
     list-style-type: none;
