--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ header img {
     font-size: 4em;
     font-family: 'Lato-Regular';
     /*font-weight: 500;*/
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
 }
 
 .header_text p {
@@ -98,7 +98,7 @@ main {
     width: 100%;
     /*margin: 40px auto;*/
     /*margin-top: 20px;*/
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .display1 {
