--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,8 @@ section {
 }
 
 .gradient_text {
-    background: linear-gradient(to right, blue, purple, pink, red, orange);
+    /*background: linear-gradient(to right, blue, purple, pink, red, orange);*/
+    background: linear-gradient(to right, #4facfe, #00f2fe);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
