--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,13 @@ header img {
     margin-right: 50px;
 }*/
 
+.gradient_text_1 {
+    background: linear-gradient(to right, #4facfe, #a150e9, #fa71cd, #ffa726, #ffeb3b);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /*text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);*/
+}
+
 .header_text h1 {
     text-align: center;
     font-size: 4em;
@@ -110,9 +117,9 @@ section {
     flex: 1;
 }
 
-.gradient_text {
-    /*background: linear-gradient(to right, blue, purple, pink, red, orange);*/
-    background: linear-gradient(to right, #0a74da, #89cff0, #b3d9ff);
+.gradient_text_2 {
+    background: linear-gradient(to right, blue, purple, pink, red, orange);
+    /*background: linear-gradient(to right, #0a74da, #89cff0, #b3d9ff);*/
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
