--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ header img {
     background: linear-gradient(to right, #4facfe, #a150e9, #fa71cd, #ffa726, #ffeb3b);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    /*text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);*/
+    text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);
 }
 
 .header_text h1 {
