--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,7 @@ section {
     font-family: 'Lato-Regular';
     color: rgb(211, 211, 280);
     margin-top: 10px;
-    margin-top: 30px;
+    margin-bottom: 30px;
     /*line-height: 1.5;*/
 }
 
