--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ section {
     /*padding: 0;*/
     /*margin-top: 5px;*/
     /*margin-bottom: 10px;*/
-    line-height: 0.3;
+    line-height: 0.2;
 }
 
 .about_me p {
@@ -187,7 +187,7 @@ section {
     font-size: 4em;
     text-align: center;
     font-family: 'Lato-Regular';
-    color: rgb(211, 211, 280);
+    color: rgb(211, 211, 300);
     margin-top: 10px;
     margin-bottom: 30px;
     /*line-height: 1.5;*/
@@ -229,29 +229,23 @@ section {
     font-size: 4em;
     text-align: center;
     font-family: 'Lato-Regular';
-    color: rgb(211, 211, 280);
-    margin-top: 20px;
-    line-height: 1.5;
+    color: rgb(211, 211, 300);
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
 
 .linkedin ul {
     list-style-type: none;
-    line-height: 1.2;
 }
 
 .linkedin ul li {
-    margin: 10px 0;
     font-size: 1.2em;
     font-family: 'Helvetica';
-    color: white;
-    line-height: 1.2;
     font-style: bold;
     text-align: center;
 }
 
 .linkedin a {
-    font-size: 1.2em;
-    font-family: 'Helvetica';
     color: blue;
     text-decoration: none;
 }
@@ -270,29 +264,24 @@ section {
     font-size: 4em;
     text-align: center;
     font-family: 'Lato-Regular';
-    color: rgb(211, 211, 280);
-    margin-top: 20px;
-    line-height: 1.5;
+    color: rgb(211, 211, 300);
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
 
 .projects ul {
     list-style-type: none;
-    line-height: 1.2;
 }
 
 .projects ul li {
-    margin: 10px 0;
     font-size: 1.2em;
     font-family: 'Helvetica';
-    color: white;
-    line-height: 1.2;
+    color: black;
     font-style: bold;
     text-align: center;
 }
 
 .projects a {
-    font-size: 1.2em;
-    font-family: 'Helvetica';
     color: blue;
     text-decoration: none;
 }
@@ -310,7 +299,6 @@ footer {
     line-height: 1;
     border-radius: 12px;
     margin-bottom: 10px;
-    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
 }
 
 footer p {
