--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,7 @@ section {
 .blog ul {
     list-style-type: none;
     /*line-height: 1.2;*/
+    margin-bottom: 10px;
 }
 
 .blog ul li {
@@ -236,6 +237,7 @@ section {
 
 .linkedin ul {
     list-style-type: none;
+    margin-bottom: 10px;
 }
 
 .linkedin ul li {
@@ -271,6 +273,7 @@ section {
 
 .projects ul {
     list-style-type: none;
+    margin-bottom: 10px;
 }
 
 .projects ul li {
