--- a/styles.css
+++ b/styles.css
@@ -203,9 +203,9 @@ section {
     /*margin: 10px 0;*/
     font-size: 1em;
     font-family: 'Helvetica';
-    /*color: white;*/
+    /*color: white;*/ /*doesn't work here*/
     /*line-height: 1.2;*/
-    /*font-weight: bold;*/
+    /*font-weight: bold;*/ /*works here*/
     text-align: center;
 }
 
@@ -216,7 +216,7 @@ section {
     text-decoration: none;
     display: inline-block;
     padding: 10px 20px;
-    background-color: rgb(0, 86, 140);
+    background-color: rgb(0, 86, 240);
     /*font-weight: bold;*/
     border-radius: 20px;
     /*box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
@@ -225,7 +225,7 @@ section {
 
 .blog a:hover {
     text-decoration: none;
-    background-color: rgb(0, 86, 180);
+    background-color: rgb(0, 86, 200);
 }
 
 .linkedin {
