--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@ section {
     text-decoration: none;
     display: inline-block;
     padding: 10px 20px;
-    background-color: #8693d6;
+    background-color: rgb(134, 147, 185);
     /*font-weight: bold;*/ /*doesn't work here*/
     border-radius: 20px;
     /*box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
