--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,7 @@ section {
 .blog a:hover {
     text-decoration: none;
     background-color: rgb(0, 43, 200);
-}*/
+}
 
 .learn_more {
     color: white;
@@ -269,14 +269,14 @@ section {
     text-align: center;
 }
 
-.linkedin a {
+/*.linkedin a {
     color: blue;
     text-decoration: none;
 }
 
 .linkedin a:hover {
     text-decoration: underline;
-}
+}*/
 
 .projects {
     background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));
@@ -306,14 +306,14 @@ section {
     text-align: center;
 }
 
-.projects a {
+/*.projects a {
     color: blue;
     text-decoration: none;
 }
 
 .projects a:hover {
     text-decoration: underline;
-}
+}*/
 
 /* Footer Styles */
 footer {
