--- a/styles.css
+++ b/styles.css
@@ -230,15 +230,18 @@ section {
 }
 
 .learn_more {
-    color: white;
+    color: rgb(0, 43, 200);
     text-decoration: none;
     display: inline-block;
     padding: 10px 20px;
-    background-color: rgb(0, 86, 240);
+    /*background-color: rgb(0, 86, 240);*/
+    background-color: white;
     border-radius: 20px;
+    border: 2px solid rgb(0, 43, 200);
 }
 
 .learn_more:hover {
+    color: white;
     text-decoration: none;
     background-color: rgb(0, 43, 200);
 }
