--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ header img {
     font-size: 4em;
     font-family: 'Lato-Regular';
     /*font-weight: 500;*/
-    /*margin-bottom: 10px;*/
+    margin-top: 10px;
 }
 
 .header_text p {
