--- a/styles.css
+++ b/styles.css
@@ -82,12 +82,17 @@ header img {
     text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);
 }
 
+.header_text {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 .header_text h1 {
     text-align: center;
     font-size: 4em;
     font-family: 'Lato-Regular';
     /*font-weight: 500;*/
-    margin-top: 10px;
+    /*margin-top: 10px;*/
 }
 
 .header_text p {
