--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,8 @@ header img {
 }
 
 .header_text {
-    margin-top: auto;
-    margin-bottom: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .header_text h1 {
