--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,8 @@ section {
 .about_me p {
     font-size: 1em;
     font-family: 'Helvetica';
-    color: rgb(220, 200, 255);
+    color: white;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     line-height: 1.2;
     font-style: bold;
     padding: 40px;
