--- a/styles.css
+++ b/styles.css
@@ -142,10 +142,18 @@ section {
     /*align-items: center;*/
     /*justify-content: center;*/
     /*height: 100vh;*/
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    overflow: hidden;
+}
+
+.about_me::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);
+    opacity: 0.8; /* Adjust opacity here */
+    z-index: -1; /* Ensure it stays behind content */
 }
 
 .about_me h1 {
