--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,7 @@ section {
     /*background-color: white;*/
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);
+    opacity: 0.5;
     /*padding: 20px;*/
     /*margin-top: 20px;
     margin-bottom: 20px;*/
@@ -142,18 +143,6 @@ section {
     /*align-items: center;*/
     /*justify-content: center;*/
     /*height: 100vh;*/
-}
-
-.about_me::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);
-    opacity: 0.8; /* Adjust opacity here */
-    z-index: -1; /* Ensure it stays behind content */
 }
 
 .about_me h1 {
