--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,8 @@ section {
     /*background-color: white;*/
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);*/
-    background: rgb(245, 245, 245);
+    /*background: rgb(245, 245, 245);*/
+    background: linear-gradient(to bottom, #d9f1ff, #f1faff);
     opacity: 0.95;
     /*padding: 20px;*/
     /*margin-top: 20px;
@@ -170,7 +171,7 @@ section {
 .about_me p {
     font-size: 1em;
     font-family: 'Helvetica';
-    color: white;
+    color: black;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     line-height: 1.2;
     font-style: bold;
