--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ section {
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);*/
     /*background: rgb(245, 245, 245);*/
     background: linear-gradient(to bottom, #d9f1ff, #f1faff);
-    opacity: 0.95;
+    /*opacity: 0.95;*/
     /*padding: 20px;*/
     /*margin-top: 20px;
     margin-bottom: 20px;*/
@@ -172,9 +172,9 @@ section {
     font-size: 1em;
     font-family: 'Helvetica';
     color: black;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    /*text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);*/
     line-height: 1.2;
-    font-style: bold;
+    /*font-style: bold;*/
     padding: 40px;
     margin-bottom: 20px;
 }
