--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,8 @@ section {
     /*background: linear-gradient(rgba(0, 0, 255, 0.8), rgba(255, 255, 255, 0.8));*/
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);*/
     /*background: rgb(245, 245, 245);*/
-    background: linear-gradient(to bottom, #d9f1ff, #f1faff);
+    /*background: linear-gradient(to bottom, #d9f1ff, #f1faff);*/
+    background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6);
     /*opacity: 0.95;*/
     /*padding: 20px;*/
     /*margin-top: 20px;
@@ -169,12 +170,12 @@ section {
 }
 
 .about_me p {
-    font-size: 1em;
+    font-size: 0.8em;
     font-family: 'Helvetica';
     color: black;
     /*text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);*/
     line-height: 1.2;
-    /*font-style: bold;*/
+    font-weight: bold;
     padding: 40px;
     margin-bottom: 20px;
 }
