--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ section {
     /*background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6, #d5e4ff);*/
     /*background: rgb(245, 245, 245);*/
     /*background: linear-gradient(to bottom, #d9f1ff, #f1faff);*/
-    background: linear-gradient(to bottom, #0a103b, #1d2977, #8693d6);
+    background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);
     /*opacity: 0.95;*/
     /*padding: 20px;*/
     /*margin-top: 20px;
@@ -170,9 +170,9 @@ section {
 }
 
 .about_me p {
-    font-size: 0.8em;
+    font-size: 0.9em;
     font-family: 'Helvetica';
-    color: black;
+    color: rgb(150, 150, 150);
     /*text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);*/
     line-height: 1.2;
     font-weight: bold;
@@ -181,7 +181,7 @@ section {
 }
 
 .text_highlight {
-    color: rgb(150, 150, 150);
+    color: black;
     /*font-weight: bold;*/
 }
 
