--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ section {
 .about_me p {
     font-size: 0.9em;
     font-family: 'Helvetica';
-    color: rgb(150, 150, 150);
+    color: white;
     /*text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);*/
     line-height: 1.2;
     font-weight: bold;
