--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ section {
     font-family: 'Helvetica';
     color: white;
     /*text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);*/
-    line-height: 1.4;
+    /*line-height: 1.4;*/
     font-weight: bold;
     padding: 40px;
     margin-bottom: 20px;
@@ -185,7 +185,7 @@ section {
     /*font-weight: bold;*/
 }
 
-p.para_spacing {
+.para_spacing {
     margin: 2px 0;
 }
 
