--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,7 @@ section {
     font-weight: bold;
     /*padding: 40px;
     margin-bottom: 20px;*/
+    margin: 20px 20px;
 }
 
 .text_highlight {
