--- a/styles.css
+++ b/styles.css
@@ -186,9 +186,9 @@ section {
     /*font-weight: bold;*/
 }
 
-.para_spacing {
+/*.para_spacing {
     margin: 5px 0;
-}
+}*/
 
 /*.about_me img {
     display: block;
