--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@ section {
     font-weight: bold;
     /*padding: 40px;
     margin-bottom: 20px;*/
-    margin: 0 40px;
+    /*margin: 0 40px;*/
 }
 
 .text_highlight {
@@ -187,12 +187,14 @@ section {
 }
 
 .para_spacing_1 {
-    margin-top: 40px;
-    margin-bottom: 50px;
+    /*margin-top: 100px;
+    margin-bottom: 50px;*/
+    padding: 40px 40px 10px 40px;
 }
 
 .para_spacing_2 {
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;*/
+    padding: 0 40px 20px 40px;
 }
 
 /*.about_me img {
