--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ main {
     /*max-width: 900px;*/
     width: 100%;
     /*margin: 40px auto;*/
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 20px;
 }
 
@@ -175,7 +175,7 @@ section {
     color: white;
     /*text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);*/
     /*line-height: 1.4;*/
-    font-weight: bold;
+    /*font-weight: bold;*/
     /*padding: 40px;
     margin-bottom: 20px;*/
     /*margin: 0 40px;*/
@@ -187,6 +187,8 @@ section {
 }
 
 .para_spacing_1 {
+    font-weight: bold;
+    line-height: 1.4;
     /*margin-top: 100px;
     margin-bottom: 50px;*/
     padding: 40px 40px 20px 40px;
