--- a/styles.css
+++ b/styles.css
@@ -190,16 +190,16 @@ section {
 }
 
 .text_highlight {
-    color: rgb(120, 120, 120);
+    color: rgb(140, 140, 140);
     /*font-weight: bold;*/
 }
 
 .para_spacing_1 {
-    font-weight: bold;
+    /*font-weight: bold;*/
     line-height: 1.4;
     /*margin-top: 100px;
     margin-bottom: 50px;*/
-    padding: 40px 40px 30px 40px;
+    padding: 40px 40px 20px 40px;
 }
 
 .para_spacing_2 {
