--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ section {
     margin: auto;
     width: 50%;
     height: auto;*/
-    align-items: center;
+    justify-content: center;
 }
 
 .blog {
