--- a/styles.css
+++ b/styles.css
@@ -208,13 +208,14 @@ section {
     padding: 0 40px 20px 40px;
 }
 
-.img {
+.about_me img {
     display: flex;
     /*display: block;
     margin: auto;
     width: 50%;
     height: auto;*/
     justify-content: center;
+    align-items: center;
 }
 
 .blog {
