--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ section {
     /*background: rgb(245, 245, 245);*/
     /*background: linear-gradient(to bottom, #d9f1ff, #f1faff);*/
     background: linear-gradient(to bottom, #0a103b, #1d2977, #d9f1ff);
-    opacity: 0.95;
+    /*opacity: 0.95;*/
     /*padding: 20px;*/
     /*margin-top: 20px;*/
     margin-bottom: 20px;
